[gd_scene load_steps=5 format=3 uid="uid://c8636n1ymhc22"]

[ext_resource type="PackedScene" uid="uid://ccpu37idlsyu8" path="res://scenes/budget_panel.tscn" id="1_ceist"]
[ext_resource type="Script" uid="uid://5c0dkr4v8hk" path="res://scripts/budget_container.gd" id="1_sqxfy"]
[ext_resource type="PackedScene" uid="uid://cr5btfwv7x0yw" path="res://scenes/budget_holder.tscn" id="2_5fk4u"]
[ext_resource type="PackedScene" uid="uid://cgkqk55qden81" path="res://scenes/ledger_panel.tscn" id="2_vk38n"]

[node name="BudgetContainer" type="MarginContainer"]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_sqxfy")
metadata/_tab_index = 0

[node name="BudgetHolder" parent="." node_paths=PackedStringArray("budget_panel", "ledger_panel", "bills_panel") instance=ExtResource("2_5fk4u")]
unique_name_in_owner = true
budget_panel = NodePath("../HBoxContainer/BudgetPanel")
ledger_panel = NodePath("../HBoxContainer/VBoxContainer/LedgerPanel")
bills_panel = NodePath("../HBoxContainer/VBoxContainer/BillsPanel")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="BudgetPanel" parent="HBoxContainer" instance=ExtResource("1_ceist")]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="LedgerPanel" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_vk38n")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
colour_hint = Color(0, 0.686275, 1, 1)

[node name="BillsPanel" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_vk38n")]
unique_name_in_owner = true
layout_mode = 2
title = "Bills"
colour_hint = Color(1, 1, 0, 1)

[connection signal="budget_changed" from="BudgetHolder" to="." method="_on_budget_holder_budget_changed"]
[connection signal="total_budget_changed" from="HBoxContainer/BudgetPanel" to="BudgetHolder" method="_on_budget_panel_total_budget_changed"]
[connection signal="class_enabled" from="HBoxContainer/VBoxContainer/LedgerPanel" to="BudgetHolder" method="_on_ledger_panel_class_enabled"]
[connection signal="transactions_changed" from="HBoxContainer/VBoxContainer/LedgerPanel" to="BudgetHolder" method="_on_ledger_panel_transactions_changed"]
[connection signal="class_enabled" from="HBoxContainer/VBoxContainer/BillsPanel" to="BudgetHolder" method="_on_bills_panel_class_enabled"]
[connection signal="class_enabled" from="HBoxContainer/VBoxContainer/BillsPanel" to="HBoxContainer/BudgetPanel" method="_on_bills_panel_class_enabled"]
[connection signal="transactions_changed" from="HBoxContainer/VBoxContainer/BillsPanel" to="BudgetHolder" method="_on_bills_panel_transactions_changed"]
[connection signal="transactions_changed" from="HBoxContainer/VBoxContainer/BillsPanel" to="HBoxContainer/BudgetPanel" method="_on_bills_panel_transactions_changed"]
